# gl-gh-issue-migrator

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config_example.ini  config_example.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
src/issue_migrator/: __init__.py  main.py  messages.py  migrator.py
tests/: test_main.py  test_messages.py  test_migrator.py
