[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "issue-migrator"
authors = [{name = "Erik Kalkoken", email = "kalkoken87@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "python-gitlab","PyGithub"
]


[project.urls]
Home = "https://gitlab.com/ErikKalkoken/aa-issue-migrator"

[tool.flit.module]
name = "issue_migrator"

[project.scripts]
issue-migrator = "issue_migrator.main:main_cli"
