[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gl-gh-issue-migrator"
authors = [{ name = "Erik Kalkoken", email = "kalkoken87@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-gitlab",
    "PyGithub",
    "vercel_blob",
    "ConfigArgParse",
    "rich",
    "pyyaml",
    "diskcache",
    "platformdirs",
]

[project.optional-dependencies]
test = ["pook", "coverage"]

[project.urls]
Home = "https://gitlab.com/ErikKalkoken/aa-issue-migrator"

[project.scripts]
issue-migrator = "issue_migrator.main:main_cli"

[tool.flit.module]
name = "issue_migrator"

[tool.isort]
profile = "black"
multi_line_output = 3
